# omopy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.opencode/: opencode.jsonc
benchmarks/: README.md  compare.py  generate_synthea_1k.R
benchmarks/python/: 01_snapshot.py  02_cohort_generation.py  03_patient_profiles.py  04_characteristics.py  05_incidence.py  06_drug_utilisation.py  07_survival.py  08_codelist.py  09_treatment_patterns.py  10_drug_diagnostics.py  helpers.py  run_all.py
benchmarks/r/: 00_helpers.R  01_snapshot.R  02_cohort_generation.R  03_patient_profiles.R  04_characteristics.R  05_incidence.R  06_drug_utilisation.R  07_survival.R  08_codelist.R  09_treatment_patterns.R  10_drug_diagnostics.R  install_packages.R  run_all.R
docs/: _build.py  audit-trail.md  comparison.md  index.md  r-package-mapping.md  roadmap.md
docs/comparison_files/: cohort_overview.mmd
docs/guide/: architecture.md  cdm-reference.md  codelist-generation.md  cohort-characteristics.md  cohort-generation.md  cohort-survival.md  drug-diagnostics.md  drug-utilisation.md  incidence-prevalence.md  installation.md  patient-profiles.md  pregnancy.md  quickstart.md  testing.md  treatment-patterns.md  visualization.md
docs/reference/: characteristics.md  codelist.md  connector.md  drug.md  drug_diagnostics.md  generics.md  incidence.md  pregnancy.md  profiles.md  survival.md  testing.md  treatment.md  vis.md
notebooks/: 01_getting_started.ipynb  02_codelist_generation.ipynb  03_cohort_generation.ipynb  04_cohort_characteristics.ipynb  05_patient_profiles.ipynb  07_drug_utilisation.ipynb  09_treatment_patterns.ipynb  10_drug_exposure_diagnostics.ipynb  11_pregnancy_analysis.ipynb  12_visualisation_styling.ipynb
src/omopy/: __init__.py
src/omopy/characteristics/: __init__.py  _mock.py  _plot.py  _summarise.py  _table.py
src/omopy/codelist/: __init__.py  _diagnostics.py  _drug.py  _hierarchy.py  _operations.py  _search.py  _stratify.py  _subset.py
src/omopy/connector/: __init__.py  _connection.py  benchmark.py  cdm_flatten.py  cdm_from_con.py  cdm_subset.py  cohort_generation.py  compute.py  copy_cdm.py  data_hash.py  date_helpers.py  db_source.py  snapshot.py  summarise_quantile.py  tbl_group.py
src/omopy/connector/circe/: __init__.py  _concept_resolver.py  _criteria.py  _domain_queries.py  _end_strategy.py  _engine.py  _era.py  _parser.py  _types.py
src/omopy/drug/: __init__.py  _add_drug_use.py  _add_intersect.py  _cohort_generation.py  _daily_dose.py  _mock.py  _plot.py  _require.py  _summarise.py  _table.py
src/omopy/drug/_data/: __init__.py  patterns.py
src/omopy/drug_diagnostics/: __init__.py  _checks.py  _mock.py  _plot.py  _summarise.py  _table.py
src/omopy/generics/: __init__.py  _io.py  _schema.py  _types.py  _validation.py  cdm_reference.py  cdm_table.py  codelist.py  cohort_table.py  summarised_result.py
src/omopy/generics/_data/: fieldsTables_v53.csv  fieldsTables_v54.csv
src/omopy/incidence/: __init__.py  _denominator.py  _estimate.py  _mock.py  _plot.py  _result.py  _table.py
src/omopy/pregnancy/: __init__.py  _concepts.py  _esd.py  _hip.py  _identify.py  _init.py  _merge.py  _mock.py  _plot.py  _pps.py  _summarise.py  _table.py
src/omopy/profiles/: __init__.py  _categories.py  _cohort_intersect.py  _columns.py  _concept_intersect.py  _death.py  _demographics.py  _intersect.py  _table_intersect.py  _utilities.py  _windows.py
src/omopy/survival/: __init__.py  _add_survival.py  _estimate.py  _mock.py  _plot.py  _result.py  _table.py
src/omopy/testing/: __init__.py  _cdm.py  _generate.py  _plot.py  _read.py
src/omopy/treatment/: __init__.py  _mock.py  _pathway.py  _plot.py  _summarise.py  _table.py
src/omopy/vis/: __init__.py  _format.py  _mock.py  _plot.py  _style.py  _table.py
tests/: conftest.py
tests/characteristics/: test_characteristics.py
tests/codelist/: test_diagnostics.py  test_drug.py  test_hierarchy.py  test_operations.py  test_search.py  test_stratify.py  test_subset.py
tests/connector/: test_benchmark.py  test_cdm_flatten.py  test_cdm_from_con.py  test_cdm_subset.py  test_cdm_subset_person.py  test_circe_engine.py  test_circe_parser.py  test_cohort_generation.py  test_compute.py  test_copy_cdm.py  test_data_hash.py  test_date_helpers.py  test_db_source.py  test_snapshot.py  test_summarise_quantile.py  test_tbl_group.py
tests/drug/: test_drug.py
tests/drug_diagnostics/: test_drug_diagnostics.py  test_drug_diagnostics_integration.py
tests/generics/: test_cdm_reference.py  test_cdm_table.py  test_codelist.py  test_cohort_table.py  test_io.py  test_schema.py  test_summarised_result.py  test_types.py  test_validation.py
tests/incidence/: test_incidence.py
tests/pregnancy/: test_pregnancy.py  test_pregnancy_integration.py
tests/profiles/: test_categories.py  test_cohort_intersect.py  test_columns.py  test_concept_intersect.py  test_death.py  test_demographics.py  test_table_intersect.py  test_utilities.py  test_windows.py
tests/survival/: test_survival.py
tests/testing/: test_testing.py
tests/treatment/: test_treatment.py  test_treatment_integration.py
tests/vis/: test_format.py  test_mock.py  test_plot.py  test_style.py  test_table.py
