[project]
name = "omopy"
version = "0.1.0"
description = "Pythonic, type-safe interface for OMOP CDM databases"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
authors = [{ name = "OMOPy Contributors" }]
keywords = ["omop", "cdm", "ohdsi", "observational-health", "epidemiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    "duckdb>=1.5.0",
    "ibis-framework>=12.0.0",
    "pandas>=2.3.3",
    "polars>=1.0",
    "pydantic>=2.12",
    "pyarrow>=23.0.1",
    "pyarrow-hotfix>=0.7",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "great-tables>=0.21.0",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
# Database backends (Phase 1+)
postgres = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1", "ibis-framework[postgres]>=9.0"]
snowflake = ["sqlalchemy>=2.0", "snowflake-sqlalchemy>=1.5", "ibis-framework[snowflake]>=9.0"]
bigquery = ["sqlalchemy>=2.0", "sqlalchemy-bigquery>=1.8", "ibis-framework[bigquery]>=9.0"]
mssql = ["sqlalchemy>=2.0", "pyodbc>=5.0", "ibis-framework[mssql]>=9.0"]
spark = ["sqlalchemy>=2.0", "pyspark>=3.5", "ibis-framework[pyspark]>=9.0"]
oracle = ["sqlalchemy>=2.0", "oracledb>=2.0", "ibis-framework[oracle]>=9.0"]
duckdb = ["sqlalchemy>=2.0", "duckdb>=1.0", "ibis-framework[duckdb]>=9.0"]

# Analytical extras (Phase 2+)
vis = ["plotnine>=0.13", "great-tables>=0.10"]
survival = ["lifelines>=0.29"]

# Everything
all = [
    "omopy[duckdb,postgres,mssql,snowflake,bigquery,spark,oracle,vis,survival]",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring database connections",
]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
